Añadiendo el depurador

--- a/templates/index.html
+++ b/templates/index.html
@@ -179,6 +179,8 @@
 
             function initUI(response){
  
+               debugger;
+               
                var supportsOrientationChange = "onorientationchange" in this,
                 orientationEvent = supportsOrientationChange ? "orientationchange" : "resize";
                 //IE8 doesn't support addEventListener so check before calling
