--- a/2016/template/theme-plataforma-arcgis.css
+++ b/2016/template/theme-plataforma-arcgis.css
@@ -15,7 +15,18 @@ section.has-light-background, section.has-light-background h1, section.has-light
 .reveal .slide-background {
   background-image: url(background.png);
 }
-
+.reveal .slide-background.geoinformation-model {
+  background-image: url(geoinformation-model.jpg);
+}
+.reveal .slide-background.appstudio {
+  background-image: url(appstudio.jpg);
+}
+.reveal .slide-background.registry-to-engagement {
+  background-image: url(registry-to-engagement.jpg);
+}
+.reveal .slide-background.world-is-changing {
+  background-image: url(world-is-changing.jpg);
+}
 .reveal .slide-background.title {
   background-image: url(title.png);
 }
@@ -33,7 +44,7 @@ section.has-light-background, section.has-light-background h1, section.has-light
 }
 
 .reveal .slide-background.end {
-  background-image: url(end.png);
+  background-image: url(end.jpg);
 }
 
 
