--- a/2016/template/theme-plataforma-arcgis.css
+++ b/2016/template/theme-plataforma-arcgis.css
@@ -13,7 +13,7 @@ section.has-light-background, section.has-light-background h1, section.has-light
 
 
 .reveal .slide-background {
-  background-image: url(background.png);
+  background-image: url(background_2.png);
 }
 .reveal .slide-background.geoinformation-model {
   background-image: url(geoinformation-model.jpg);
